--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ workflows:
             branches:
               only:
                 - main
+                - zachlipton/max-body-size
 
 jobs:
   unit_test:
